tests/errors/syn_while2.java
public class syn_while2 {
public static void main(String[] args){
( true || false ) {
 
}
}
}